apply: dll auraPromotion && HospitallerKnight fix

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -179,3 +179,5 @@ v7.0.0 2024.01.
 
 v7.0.1 2025.1
 1.极大削弱未央宫、金殿、白城的奇观属性，同时降低产能要求
+2.所有光环晋升基于MPDLLv38.1实现，热气球光环气球上的五星期改为叠加，实际效果不变
+3.修复医院骑士的回复效果对同格单位重复生效的问题
